# fish-market

./: README.md  deploy.sh  docker-compose.yaml  sample.env
backend/: docker-compose.yaml  pyproject.toml  sample.env  start_server.sh
backend/app/: config.py  hash_utils.py  logger.py  main.py  oauth2.py
backend/app/admin/: __init__.py  authentication_backend.py  business.py  order.py  phone.py  product.py  user.py
backend/app/model/: __init__.py  business.py  customer.py  enums.py  order.py  order_history.py  order_item.py  phone_number.py  prep.py  product.py  user.py  utils.py
backend/app/router/: auth.py  business.py  constants.py  customer.py  order.py  phone_number.py  post.py  product.py  user.py  utils.py
backend/app/schema/: __init__.py  business_out.py  business_product_out_schemas.py  business_schemas.py  change_password.py  create_order.py  create_order_schemas.py  create_user_business.py  get_order_schemas.py  order.py  patch_order_schemas.py  prep_schemas.py  product_schemas.py  token_app.py  user_create.py  user_out.py  user_update.py
backend/app/service/: __init__.py  oauth2.py  twilio.py  up_sender.py
backend/migrations/: env.py
backend/migrations/versions/: 0419900c5420_added_phone_number_for_bussiness.py  1088d32bd9e8_create_models.py  (+15 more)
backend/pg-backup/: ReadMe.md
backend/static/: index.html
backend/tasks/: __init__.py  db_utils.py  init_db.py
backend/tests/: conftest.py  database.py  test_business.py  test_business_out.py  test_customer.py  test_order.py  test_phone_number.py  test_prep.py  test_product.py  test_user.py
(+172 files in other folders)
